Test truthbeam TLS

--- a/compose.yaml
+++ b/compose.yaml
@@ -46,7 +46,9 @@ services:
     volumes:
       - ./hack/sampledata:/sampledata:Z
       - ./hack/demo/config.yaml:/config.yaml:Z
-    command: ["--config", "/config.yaml", "--catalog", "/sampledata/osps.yaml",  "--port", "8081", "--skip-tls"]
+      - ./hack/self-signed-cert/compass.crt:/certs/compass.crt:Z
+      - ./hack/self-signed-cert/compass.key:/certs/compass.key:Z
+    command: ["--config", "/config.yaml", "--catalog", "/sampledata/osps.yaml",  "--port", "8081"]
     ports:
       - "8081:8081"
 
@@ -60,6 +62,7 @@ services:
     volumes:
       - ./hack/demo/demo-config.yaml:/etc/otel-collector.yaml:Z
       - ./data:/data:Z
+      - ./hack/self-signed-cert/my-ca.crt:/certs/my-ca.crt:Z
     ports:
       - "4317:4317"
       - "8088:8088"
