--- a/hack/demo/demo-config.yaml
+++ b/hack/demo/demo-config.yaml
@@ -65,6 +65,7 @@ exporters:
       region: ${AWS_REGION}
       s3_bucket: ${S3_BUCKETNAME}
       s3_prefix: ${S3_OBJ_DIR}
+      s3_partition_format: ""
 
 service:
   pipelines:
