--- a/hack/demo/demo-config.yaml
+++ b/hack/demo/demo-config.yaml
@@ -6,6 +6,21 @@ receivers:
     health_path: "/eventreceiver/healthcheck"
     split_logs_at_newline: false
 
+  # Filelog receiver: reads metrics JSON and sends to Loki as logs
+  filelog/metrics:
+    include:
+      - /data/metrics.jsonl
+    start_at: end
+    poll_interval: 250ms
+    operators:
+      - type: json_parser
+        id: parser-metrics
+        output: extract_metric_data
+      - type: add
+        id: extract_metric_data
+        field: attributes.service_name
+        value: "signaltometrics"
+
   otlp:
     protocols:
       grpc:
@@ -15,18 +30,35 @@ receivers:
 
 processors:
   batch:
+  batch/metrics:
+    timeout: 1s
+    send_batch_size: 10
   truthbeam:
     endpoint: "https://compass:8081"
     # Disable compression for small enrichment API requests
     # Compression overhead is unnecessary for ~200 byte payloads
     compression: ""
     tls:
-      # Configure TLS settings
-      # Path to the CA certificate for verifying the server's certificate.
       ca_file: /certs/truthbeam.crt
-      # (Optional) If the server requires client authentication (mTLS):
-      # cert_file: /path/to/your/client.crt
-      # key_file: /path/to/your/client.key
+
+  # Transform processor: extracts metric data from OTLP JSON and converts to log attributes
+  transform/metrics_to_logs:
+    error_mode: ignore
+    log_statements:
+      - context: log
+        conditions:
+          - attributes["service_name"] == "signaltometrics"
+        statements:
+          # Parse OTLP JSON: resourceMetrics[0].scopeMetrics[0].metrics[0]
+          - set(attributes["_metric_parsed"], true) where IsMap(ParseJSON(body))
+          - set(attributes["metric_name"], ParseJSON(body)["resourceMetrics"][0]["scopeMetrics"][0]["metrics"][0]["name"]) where IsMap(ParseJSON(body)) and ParseJSON(body)["resourceMetrics"] != nil
+          # Extract metric value (asDouble or asInt)
+          - set(attributes["metric_value"], ParseJSON(body)["resourceMetrics"][0]["scopeMetrics"][0]["metrics"][0]["sum"]["dataPoints"][0]["asDouble"]) where ParseJSON(body)["resourceMetrics"] != nil and ParseJSON(body)["resourceMetrics"][0]["scopeMetrics"][0]["metrics"][0]["sum"] != nil and ParseJSON(body)["resourceMetrics"][0]["scopeMetrics"][0]["metrics"][0]["sum"]["dataPoints"][0]["asDouble"] != nil
+          - set(attributes["metric_value"], ParseJSON(body)["resourceMetrics"][0]["scopeMetrics"][0]["metrics"][0]["sum"]["dataPoints"][0]["asInt"]) where ParseJSON(body)["resourceMetrics"] != nil and ParseJSON(body)["resourceMetrics"][0]["scopeMetrics"][0]["metrics"][0]["sum"] != nil and ParseJSON(body)["resourceMetrics"][0]["scopeMetrics"][0]["metrics"][0]["sum"]["dataPoints"][0]["asInt"] != nil
+          # Extract metric labels from dataPoints and resource attributes
+          - merge_maps(attributes, ParseJSON(body)["resourceMetrics"][0]["scopeMetrics"][0]["metrics"][0]["sum"]["dataPoints"][0]["attributes"], "upsert") where ParseJSON(body)["resourceMetrics"] != nil and ParseJSON(body)["resourceMetrics"][0]["scopeMetrics"][0]["metrics"][0]["sum"]["dataPoints"][0]["attributes"] != nil
+          - merge_maps(attributes, ParseJSON(body)["resourceMetrics"][0]["resource"]["attributes"], "upsert") where ParseJSON(body)["resourceMetrics"] != nil and ParseJSON(body)["resourceMetrics"][0]["resource"]["attributes"] != nil
+          - set(body, attributes) where attributes["_metric_parsed"] == true
 
   # For logs that are received from or something similar filelog instead of OTLP.
   # These are expected to be in OCSF format before entering the pipeline.
@@ -41,9 +73,10 @@ processors:
           - set(time, observed_time) where time_unix_nano == 0
           # Extract policy.rule.id from OCSF policy.uid field
           - set(attributes["policy.rule.id"], ParseJSON(body)["policy"]["uid"]) where ParseJSON(body)["policy"]["uid"] != nil
-          # Extract control ID from policy.data JSON string (for OSPS Baseline controls)
-          # The policy.data field contains JSON with sources[0].name as the control ID (e.g., "OSPS-QA-05.01")
+          # Extract control ID from policy.data.sources[0].name (OSPS Baseline controls)
           - set(attributes["policy.rule.id"], ParseJSON(ParseJSON(body)["policy"]["data"])["sources"][0]["name"]) where ParseJSON(body)["policy"]["data"] != nil and ParseJSON(ParseJSON(body)["policy"]["data"])["sources"] != nil and ParseJSON(ParseJSON(body)["policy"]["data"])["sources"][0]["name"] != nil
+          # Extract policy.data.config.include (first element of array) as attribute
+          - set(attributes["policy.config.include"], ParseJSON(ParseJSON(body)["policy"]["data"])["sources"][0]["config"]["include"][0]) where ParseJSON(body)["policy"]["data"] != nil and ParseJSON(ParseJSON(body)["policy"]["data"])["sources"] != nil and ParseJSON(ParseJSON(body)["policy"]["data"])["sources"][0]["config"] != nil and ParseJSON(ParseJSON(body)["policy"]["data"])["sources"][0]["config"]["include"] != nil and Len(ParseJSON(ParseJSON(body)["policy"]["data"])["sources"][0]["config"]["include"]) > 0
           # Extract policy.engine.name from OCSF metadata.product.name field
           - set(attributes["policy.engine.name"], ParseJSON(body)["metadata"]["product"]["name"]) where ParseJSON(body)["metadata"]["product"]["name"] != nil
           # Extract policy.evaluation.result from OCSF status field (mapped to Compass enum values)
@@ -55,29 +88,58 @@ processors:
           - set(attributes["policy.evaluation.result"], "Unknown") where ParseJSON(body)["status"] == "unknown" or ParseJSON(body)["status"] == "error" or ParseJSON(body)["status"] == "timeout"
           # Set default Unknown if status is not recognized
           - set(attributes["policy.evaluation.result"], "Unknown") where ParseJSON(body)["status"] != nil and attributes["policy.evaluation.result"] == nil
+          # Extract severity from OCSF evidence
+          - set(attributes["severity"], ParseJSON(body)["severity"]) where ParseJSON(body)["severity"] != nil
 
 connectors:
-  # SignalToMetrics connector converts enriched logs into control health metrics
-  # It acts as both an exporter (from logs pipeline) and receiver (to metrics pipeline)
-  # Log attributes are automatically included as metric labels
+  # SignalToMetrics: converts enriched logs to metrics (exporter from logs, receiver to metrics)
   signaltometrics:
     logs:
-      # Control evaluation count metric - tracks total evaluations per control
-      # Attributes from logs (control_id, result, status) automatically become metric labels
+      # Control evaluation count metric
       - name: compliance.control.evaluations
         description: "Total number of control evaluations"
         unit: "1"
         sum:
-          value: "1"
-      # Control pass/fail status metric - counts by result type
+          value: "1" # increment by 1 for each log record
+      # Control evaluation result metric
       - name: compliance.control.evaluation.result
         description: "Count of control evaluations by result (Passed/Failed/etc)"
         unit: "1"
         sum:
           value: "1"
-      # Control compliance status metric - tracks compliance status distribution
+      # Control compliance status metric
       - name: compliance.control.status
         description: "Count of control evaluations by compliance status"
+        unit: "1"
+        sum:
+          value: "1"
+      # Policy config include metric - associates config.include with control ID
+      - name: compliance.control.config.include
+        description: "Count of control evaluations by policy config include value"
+        unit: "1"
+        sum:
+          value: "1"
+      # Control evaluations by policy engine
+      - name: compliance.control.by.engine
+        description: "Count of control evaluations by policy engine"
+        unit: "1"
+        sum:
+          value: "1"
+      # Control evaluations by control category
+      - name: compliance.control.by.category
+        description: "Count of control evaluations by control category"
+        unit: "1"
+        sum:
+          value: "1"
+      # Control evaluations by enrichment status
+      - name: compliance.control.by.enrichment.status
+        description: "Count of control evaluations by enrichment status"
+        unit: "1"
+        sum:
+          value: "1"
+      # Control evaluations by severity
+      - name: compliance.control.by.severity
+        description: "Count of control evaluations by severity level"
         unit: "1"
         sum:
           value: "1"
@@ -85,20 +147,20 @@ connectors:
 exporters:
   debug:
     verbosity: detailed
-  # Loki exporter for logs - keep existing functionality
   otlphttp/logs:
     endpoint: "http://loki:3100/otlp"
     tls:
       insecure: true
-  # Note: Loki doesn't support OTLP metrics endpoint
-  # Metrics from signaltometrics are used internally, but visualization queries enriched logs directly
-  # AWS S3 exporter for logs - keep existing functionality
-  awss3/logs:
-    s3uploader:
-      region: ${AWS_REGION}
-      s3_bucket: ${S3_BUCKETNAME}
-      s3_prefix: ${S3_OBJ_DIR}
-      s3_partition_format: ""
+  # File exporter: writes metrics as JSON for filelog receiver
+  file/metrics:
+    path: /data/metrics.jsonl
+    format: json
+  # awss3/logs:
+  #   s3uploader:
+  #     region: ${AWS_REGION}
+  #     s3_bucket: ${S3_BUCKETNAME}
+  #     s3_prefix: ${S3_OBJ_DIR}
+  #     s3_partition_format: ""
 
 service:
   pipelines:
@@ -106,21 +168,23 @@ service:
       receivers: [otlp]
       processors: [batch]
       exporters: [debug]
-    # Metrics pipeline for control health metrics generated from logs
-    # Note: Metrics are not exported to Loki (Loki doesn't support OTLP metrics endpoint)
-    # Instead, query the enriched logs directly from Loki using LogQL
-    # signaltometrics generates metrics internally for processing, but visualization uses enriched logs
+    # Metrics pipeline: SignalToMetrics -> file -> filelog -> Loki
     metrics/control_health:
       receivers: [signaltometrics]
-      processors: [batch]
-      exporters: [debug]
-    # Direct metrics pipeline (for any metrics received via OTLP)
+      processors: [batch/metrics]
+      exporters: [debug, file/metrics]
+    # Logs pipeline: reads metrics from file and exports to Loki
+    logs/metrics_from_file:
+      receivers: [filelog/metrics]
+      processors: [batch/metrics, transform/metrics_to_logs]
+      exporters: [debug, otlphttp/logs]
     metrics:
       receivers: [otlp]
       processors: [batch]
       exporters: [debug]
-    # Logs pipeline - enriched logs are exported to both storage and metrics connector
     logs/analysis_pipeline:
       receivers: [webhookevent, otlp]
       processors: [batch, transform/ocsf, truthbeam]
-      exporters: [debug, otlphttp/logs, awss3/logs, signaltometrics]
+      exporters: [debug, otlphttp/logs, signaltometrics]
+
+      # exporters: [debug, otlphttp/logs, awss3/logs, signaltometrics]
