--- a/hack/sampledata/evaluations/plan.yml
+++ b/hack/sampledata/evaluations/plan.yml
@@ -9,79 +9,7 @@ plans:
         reference-id: OSPS-B
         entry-id: OSPS-QA-07.01
       procedures:
-        - id: "OSPS-QA-07.01"
+        - id: "github_branch_protection"
           name: "github_branch_protection"
           description: "Checking branch protections in GitHub"
           documentation: https://docs.github.com/en/repositories/configuring-branches-and-merges-in-your-repository/managing-protected-branches/managing-a-branch-protection-rule
-    - requirement:
-        reference-id: OSPS-B
-        entry-id: OSPS-QA-07.02
-      procedures:
-        - id: "OSPS-QA-07.02"
-          name: "code_review"
-          description: "Code review requirements"
-          documentation: https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/reviewing-changes-in-pull-requests/about-pull-request-reviews
-    - requirement:
-        reference-id: OSPS-B
-        entry-id: OSPS-QA-07.03
-      procedures:
-        - id: "OSPS-QA-07.03"
-          name: "signed_commits"
-          description: "Signed commits requirement"
-          documentation: https://docs.github.com/en/authentication/managing-commit-signature-verification/about-commit-signature-verification
-- control:
-   reference-id: OSPS-B
-   entry-id: OSPS-QA-05
-  assessments:
-    - requirement:
-        reference-id: OSPS-B
-        entry-id: OSPS-QA-05.01
-      procedures:
-        - id: "OSPS-QA-05.01"
-          name: "dependency_scan"
-          description: "Dependency scanning for vulnerabilities"
-          documentation: https://docs.github.com/en/code-security/dependabot/dependabot-alerts/about-dependabot-alerts
-    - requirement:
-        reference-id: OSPS-B
-        entry-id: OSPS-QA-05.02
-      procedures:
-        - id: "OSPS-QA-05.02"
-          name: "dependency_update"
-          description: "Dependency update frequency"
-          documentation: https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/about-dependabot-version-updates
-- control:
-   reference-id: OSPS-B
-   entry-id: OSPS-QA-06
-  assessments:
-    - requirement:
-        reference-id: OSPS-B
-        entry-id: OSPS-QA-06.02
-      procedures:
-        - id: "OSPS-QA-06.02"
-          name: "secret_scan"
-          description: "Secret detection in code"
-          documentation: https://docs.github.com/en/code-security/secret-scanning/about-secret-scanning
-- control:
-   reference-id: OSPS-B
-   entry-id: OSPS-QA-08
-  assessments:
-    - requirement:
-        reference-id: OSPS-B
-        entry-id: OSPS-QA-08.01
-      procedures:
-        - id: "OSPS-QA-08.01"
-          name: "vulnerability_disclosure"
-          description: "Vulnerability disclosure policy"
-          documentation: https://www.cisa.gov/resources-tools/resources/vulnerability-disclosure-policy-template
-- control:
-   reference-id: OSPS-B
-   entry-id: OSPS-QA-09
-  assessments:
-    - requirement:
-        reference-id: OSPS-B
-        entry-id: OSPS-QA-09.01
-      procedures:
-        - id: "OSPS-QA-09.01"
-          name: "security_policy"
-          description: "Security policy documentation"
-          documentation: https://docs.github.com/en/code-security/security-advisories/working-with-repository-security-advisories/about-repository-security-advisories
