--- a/beacon-distro/manifest.yaml
+++ b/beacon-distro/manifest.yaml
@@ -32,3 +32,6 @@ providers:
 
 connectors:
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/connector/signaltometricsconnector v0.144.0
+
+extensions:
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/oidcauthextension v0.144.0
